--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* start services */
+:root {
+  --primary-color: #434343;
+  --secondary-color: #ecd18e;
+  --secondary-alt-color: #bfab7b;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 /* Services Image Section */
 .services-img {
   background-image: url("../img/dafza-services-header.jpg");
@@ -9,10 +21,10 @@
 }
 
 .services-text {
-  color: white;
+  color: var(--secondary-color);
   font-size: 2.5rem;
   font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 5px rgba(0, 0, 0,  0.3);
 }
 
 /* Sub-links styles */
@@ -57,24 +69,9 @@
   font-weight: bold;
 }
 
-/* Details section styles */
-.sec-heading {
-  position: relative;
-}
-
-.sec-heading::before {
-  content: "";
-  position: absolute;
-  bottom: -10px;
-  left: 0;
-  width: 10%;
-  background-color: #000;
-  height: 1px;
-}
-/* Styling the icon */
 /* Styling the icon */
 .custom-icon {
-  color: #4b4b4b;
+  color: var(--secondary-alt-color);
   font-size: 40px;
 }
 
@@ -95,12 +92,19 @@
   color: #2df506;
 }
 
+.first-sec {
+  margin-top: 100px;
+}
+
 .details .box .boxes-details h2 {
   font-weight: 400;
   font-size: 22px;
-  color: #ecd18e;
+  color: #bfab7b;
 }
 
+.details .icon i {
+  color: var(--secondary-alt-color) !important;
+}
 /* notarization section */
 .notarization {
   background-color: #edf2f5;
@@ -108,9 +112,14 @@
   margin-top: 100px;
 }
 
+.notarization .sec-details h4 {
+  color: #bfab7b;
+}
+
 /* mofa section */
 .mofa {
   margin-top: 100px;
+  padding: 0 15px;
 }
 .mofa .col-md-2 {
   background-color: #f8f9fa;
@@ -133,8 +142,12 @@
   color: #343a40;
 }
 
-.mofa i {
-  color: #007bff;
+.mofa .icon {
+  color: var(--secondary-alt-color);
+}
+
+.mofa .box h5 {
+  color: #434343;
 }
 
 /* translation section */
@@ -163,11 +176,12 @@
 .translation .service-box .icon {
   font-size: 3rem;
   margin-bottom: 15px;
+  color: #434343;
 }
 
 .translation h4 {
   font-size: 1.4rem;
-  color: #343a40;
+  color: #bfab7b;
   margin-bottom: 15px;
 }
 
@@ -182,20 +196,41 @@
   background-color: #f8f9fa;
 }
 
+.details .details-heading {
+  color: #bfab7b;
+}
+
+.sec-heading {
+  color: var(--secondary-alt-color);
+  font-size: 30px;
+  position: relative;
+  width: fit-content;
+}
+
+.sec-heading::after {
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  left: 0;
+  height: 2px;
+  width: 10%;
+  background-color: var(--secondary-alt-color);
+  transition: 0.3s;
+}
+.sec-heading:hover::after {
+  width: 100%;
+}
+
+.verification .sec-heading::before {
+  left: 12px;
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .sub-links {
     border: none;
     height: auto;
     padding-bottom: 50px;
-  }
-
-  .translation h2 {
-    font-size: 2rem;
-  }
-
-  .translation .service-box i {
-    font-size: 2.5rem;
   }
 
   .translation h4 {
@@ -209,4 +244,10 @@
   .translation .second-box {
     margin-top: 50px;
   }
+
+  .verification h2 {
+    margin-bottom: 40px !important;
+  }
 }
+
+/* end services */
